# spbu_c_homeworks

./: .gitignore  CMakeLists.txt
.github/workflows/: build_with_lint.yml
homework_!/: task_1.c  task_2.c
homework_1/: task_1.c  task_2.c  task_3.c
homework_1/hw1.1/: README.md  main.c
homework_1/hw1.2/: README.md  main.c
homework_1/hw1.3/: README.md  main.c
homework_1/hw1.4/: README.md  main.c
homework_1/hw1.5/: main.c
homework_2/hw2.1/: README.md  main.c
homework_2/hw2.2/: main.c
homework_2/hw2.3/: README.md  main.c
homework_2/hw2.4/: README.md  main.c
homework_2/hw2.5/: README.md  main.c
homework_3/hw3.1/: main.c
homework_3/hw3.2/: main.c
homework_4/hw4.2/: main.c
test_1/test1.1/: main.c
test_1/test1.2/: main.c
